force-app/main/default/objects/Client_Reference_Requests__c/Client_Reference_Requests__c.object-meta.xml
<CustomObject>
    <description>criteria used to find client references along with number found, number selected, submitter info and date</description>
    <label>Client Reference Requests</label>
    <nameField>
        <displayFormat>CR-Req-{0000}</displayFormat>
        <label>CR Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Reference Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>