force-app/main/default/objects/Client_Reference_Requests__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Prospect - January</fullName>
            </value>
            <value>
                <fullName>FLEX Client</fullName>
            </value>
            <value>
                <fullName>Advantage Client</fullName>
            </value>
            <value>
                <fullName>HRS Client (Only)</fullName>
            </value>
            <value>
                <fullName>HR Solutions FLEX Client</fullName>
            </value>
            <value>
                <fullName>HR Solutions Preview Client</fullName>
            </value>
            <value>
                <fullName>HR Solutions Advantage Client</fullName>
            </value>
            <value>
                <fullName>HR Solutions NPR</fullName>
            </value>
            <value>
                <fullName>Lost Client</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Independent Agent</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Decision Maker Elsewhere</fullName>
            </value>
            <value>
                <fullName>Current Client</fullName>
            </value>
            <value>
                <fullName>SurePayroll</fullName>
            </value>
            <value>
                <fullName>Preview Client</fullName>
            </value>
            <value>
                <fullName>PEO Client</fullName>
            </value>
            <value>
                <fullName>MMS Client</fullName>
            </value>
            <value>
                <fullName>CORE Client</fullName>
            </value>
            <value>
                <fullName>Premier Core Client</fullName>
            </value>
            <value>
                <fullName>Premier Core Unbundled Client</fullName>
            </value>
            <value>
                <fullName>Premier Core Bundled Client</fullName>
            </value>
            <value>
                <fullName>Premier MMS Client</fullName>
            </value>
            <value>
                <fullName>Premier Advantage Client</fullName>
            </value>
            <value>
                <fullName>Premier PBS Client</fullName>
            </value>
            <value>
                <fullName>Premier NPR Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>