force-app/main/default/objects/Client_Reference_Requests__c/fields/Accounting_Software__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Software__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accounting Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>