force-app/main/default/objects/Client_Reference_Requests__c/fields/ATS_Current_Prior_Method__c.field-meta.xml
<CustomField>
    <fullName>ATS_Current_Prior_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ATS Current-Prior Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>