force-app/main/default/objects/Client_Reference_Requests__c/fields/Benefits_Administration__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Administration__c</fullName>
    <label>Benefits Administration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BeneTrac</fullName>
            </value>
            <value>
                <fullName>Flex BenAdmin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>