force-app/main/default/objects/Client_Reference_Requests__c/fields/Business_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_1__c</fullName>
    <description>Business Type 1 from Client Reference</description>
    <label>Business Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation and Food Services</fullName>
            </value>
            <value>
                <fullName>Administrative and Support and Waste Management and Remediation Services</fullName>
            </value>
            <value>
                <fullName>Agriculture, Forestry, Fishing and Hunting</fullName>
            </value>
            <value>
                <fullName>Arts, Entertainment, and Recreation</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Educational Services</fullName>
            </value>
            <value>
                <fullName>Finance and Insurance</fullName>
            </value>
            <value>
                <fullName>Health Care and Social Assistance</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Management of Companies and Enterprises</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Mining	Mining</fullName>
            </value>
            <value>
                <fullName>Other Services (except Public Administration)</fullName>
            </value>
            <value>
                <fullName>Professional, Scientific, and Technical Services</fullName>
            </value>
            <value>
                <fullName>Public Administration</fullName>
            </value>
            <value>
                <fullName>Real Estate and Rental and Leasing</fullName>
            </value>
            <value>
                <fullName>Retail Trade</fullName>
            </value>
            <value>
                <fullName>Transportation and Warehousing</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Wholesale Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>