force-app/main/default/objects/Client_Reference_Requests__c/fields/Business_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_2__c</fullName>
    <description>Business Type 2 from Client Reference</description>
    <label>Business Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Administration of Environmental Quality Programs</fullName>
            </value>
            <value>
                <fullName>Administration of Housing Programs, Urban Planning, and Community Development</fullName>
            </value>
            <value>
                <fullName>Administration of Human Resource Programs</fullName>
            </value>
            <value>
                <fullName>Administrative and Support Services</fullName>
            </value>
            <value>
                <fullName>Ambulatory Health Care Services</fullName>
            </value>
            <value>
                <fullName>Amusement, Gambling, and Recreation Industries</fullName>
            </value>
            <value>
                <fullName>Animal Production</fullName>
            </value>
            <value>
                <fullName>Apparel Manufacturing</fullName>
            </value>
            <value>
                <fullName>Building Material and Garden Equipment and Supplies Dealers</fullName>
            </value>
            <value>
                <fullName>Chemical Manufacturing</fullName>
            </value>
            <value>
                <fullName>Clothing and Clothing Accessories Stores</fullName>
            </value>
            <value>
                <fullName>Computer and Electronic Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Construction of Buildings</fullName>
            </value>
            <value>
                <fullName>Couriers and Messengers</fullName>
            </value>
            <value>
                <fullName>Credit Intermediation and Related Activities</fullName>
            </value>
            <value>
                <fullName>Crop Production</fullName>
            </value>
            <value>
                <fullName>Data Processing, Hosting and Related Services</fullName>
            </value>
            <value>
                <fullName>Educational Services</fullName>
            </value>
            <value>
                <fullName>Electrical Equipment, Appliance, and Component Manufacturing</fullName>
            </value>
            <value>
                <fullName>Electronics and Appliance Stores</fullName>
            </value>
            <value>
                <fullName>Executive, Legislative, and Other General Government Support</fullName>
            </value>
            <value>
                <fullName>Fabricated Metal Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Food and Beverage Stores</fullName>
            </value>
            <value>
                <fullName>Food Manufacturing</fullName>
            </value>
            <value>
                <fullName>Food Services and Drinking Places</fullName>
            </value>
            <value>
                <fullName>Funds, Trusts, and Other Financial Vehicles</fullName>
            </value>
            <value>
                <fullName>Furniture and Home Furnishings Stores</fullName>
            </value>
            <value>
                <fullName>Furniture and Related Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Gasoline Stations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>