force-app/main/default/objects/Client_Reference_Requests__c/fields/EE_max__c.field-meta.xml
<CustomField>
    <fullName>EE_max__c</fullName>
    <description>maximum employee count</description>
    <label>EE max</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>