force-app/main/default/objects/Client_Reference_Requests__c/fields/EE_min__c.field-meta.xml
<CustomField>
    <fullName>EE_min__c</fullName>
    <description>minimum employee count</description>
    <label>EE min</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>