force-app/main/default/objects/Client_Reference_Requests__c/fields/Flex_Hiring__c.field-meta.xml
<CustomField>
    <fullName>Flex_Hiring__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flex Hiring</label>
    <length>100</length>
    <type>Text</type>
</CustomField>