force-app/main/default/objects/Client_Reference_Requests__c/fields/FSA__c.field-meta.xml
<CustomField>
    <fullName>FSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYX FSA</label>
    <type>Checkbox</type>
</CustomField>