force-app/main/default/objects/Client_Reference_Requests__c/fields/HR_Online__c.field-meta.xml
<CustomField>
    <fullName>HR_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HR Online</label>
    <type>Checkbox</type>
</CustomField>