force-app/main/default/objects/Client_Reference_Requests__c/fields/Job_Costing__c.field-meta.xml
<CustomField>
    <fullName>Job_Costing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Costing</label>
    <type>Checkbox</type>
</CustomField>