force-app/main/default/objects/Client_Reference_Requests__c/fields/Labor_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Labor_Distribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Labor Distribution</label>
    <type>Checkbox</type>
</CustomField>