force-app/main/default/objects/Client_Reference_Requests__c/fields/Medical__c.field-meta.xml
<CustomField>
    <fullName>Medical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYX H&amp;B</label>
    <type>Checkbox</type>
</CustomField>