force-app/main/default/objects/Client_Reference_Requests__c/fields/Multi_Id__c.field-meta.xml
<CustomField>
    <fullName>Multi_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, add IsChild or isParent to search query</description>
    <label>Multi Id</label>
    <type>Checkbox</type>
</CustomField>