force-app/main/default/objects/Client_Reference_Requests__c/fields/Number_Found__c.field-meta.xml
<CustomField>
    <fullName>Number_Found__c</fullName>
    <description>number of client referrals found matching the criteria</description>
    <label>Number Found</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>