force-app/main/default/objects/Client_Reference_Requests__c/fields/Number_Selected__c.field-meta.xml
<CustomField>
    <fullName>Number_Selected__c</fullName>
    <description>number of records selected from this request</description>
    <label>Number Selected</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>