force-app/main/default/objects/Client_Reference_Requests__c/fields/PAYX_WCPS__c.field-meta.xml
<CustomField>
    <fullName>PAYX_WCPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYX WCPS</label>
    <type>Checkbox</type>
</CustomField>