force-app/main/default/objects/Client_Reference_Requests__c/fields/POP__c.field-meta.xml
<CustomField>
    <fullName>POP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYX POP</label>
    <type>Checkbox</type>
</CustomField>