force-app/main/default/objects/Client_Reference_Requests__c/fields/PR_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>PR_Sales_Rep__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PR Sales Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>