force-app/main/default/objects/Client_Reference_Requests__c/fields/Preview_to_Flex_Migration__c.field-meta.xml
<CustomField>
    <fullName>Preview_to_Flex_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preview to Flex Migration</label>
    <type>Checkbox</type>
</CustomField>