force-app/main/default/objects/Client_Reference_Requests__c/fields/Previous_Method_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Previous_Method_Level_2__c</fullName>
    <description>Previous Method Level 2 from Client Reference</description>
    <label>Previous Method Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Advantage</fullName>
            </value>
            <value>
                <fullName>After The Fact Payroll</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Basic Payroll</fullName>
            </value>
            <value>
                <fullName>Bookkeeper</fullName>
            </value>
            <value>
                <fullName>Ceridian/Dayforce</fullName>
            </value>
            <value>
                <fullName>Client Reload for Errors</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Employee Leasing</fullName>
            </value>
            <value>
                <fullName>Gusto</fullName>
            </value>
            <value>
                <fullName>Heartland Payroll Solutions</fullName>
            </value>
            <value>
                <fullName>Interpay</fullName>
            </value>
            <value>
                <fullName>Intuit/Quickbooks</fullName>
            </value>
            <value>
                <fullName>Local Competitor</fullName>
            </value>
            <value>
                <fullName>Major Market Services</fullName>
            </value>
            <value>
                <fullName>Manual Payroll</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Other National Payroll Competitor</fullName>
            </value>
            <value>
                <fullName>Other Network Software</fullName>
            </value>
            <value>
                <fullName>Other Non-Payroll Competitor</fullName>
            </value>
            <value>
                <fullName>Other PC Desktop Software</fullName>
            </value>
            <value>
                <fullName>Other PC Internet Software</fullName>
            </value>
            <value>
                <fullName>Out of Business Competitor</fullName>
            </value>
            <value>
                <fullName>Paychex - another office or client number</fullName>
            </value>
            <value>
                <fullName>Paychex HR Solutions - Administrative Service</fullName>
            </value>
            <value>
                <fullName>Paychex HR Solutions - ASO</fullName>
            </value>
            <value>
                <fullName>Paychex HR Solutions - PEO</fullName>
            </value>
            <value>
                <fullName>Paychex Online Payroll</fullName>
            </value>
            <value>
                <fullName>Paycom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>