force-app/main/default/objects/Client_Reference_Requests__c/fields/SimpleIRA__c.field-meta.xml
<CustomField>
    <fullName>SimpleIRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYX SimpleIRA</label>
    <type>Checkbox</type>
</CustomField>