force-app/main/default/objects/Client_Reference_Requests__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>BillingState from Account, comma delimited list</description>
    <encryptionScheme>None</encryptionScheme>
    <label>State</label>
    <length>120</length>
    <type>Text</type>
</CustomField>