force-app/main/default/objects/Client_Reference_Requests__c/fields/Strategic_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_Number__c</fullName>
    <description>Strategic Account Number from Account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategic Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>