force-app/main/default/objects/Client_Reference_Requests__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>user submitting request</description>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Referral_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>