force-app/main/default/objects/Client_Reference_Requests__c/fields/Time_and_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Time_and_Attendance__c</fullName>
    <label>Time and Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PST 1000</fullName>
            </value>
            <value>
                <fullName>TLO</fullName>
            </value>
            <value>
                <fullName>TIB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>