force-app/main/default/objects/Client_Reference_Requests__c/fields/X401_k__c.field-meta.xml
<CustomField>
    <fullName>X401_k__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYX 401k</label>
    <type>Checkbox</type>
</CustomField>