force-app/main/default/objects/Client_Reference_Requests__c/fields/Years_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Service__c</fullName>
    <description>Years of Service from Client Reference</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Years of Service</label>
    <length>10</length>
    <type>Text</type>
</CustomField>