force-app/main/default/objects/Client_Reference_Requests__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <description>Billing Postal Code from Account, comma delimited list</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zipcode</label>
    <length>120</length>
    <type>Text</type>
</CustomField>