force-app/main/default/objects/Client_Reference_Requests__c/listViews/Created_this_month.listView-meta.xml
<ListView>
    <fullName>Created_this_month</fullName>
    <columns>NAME</columns>
    <columns>Number_Found__c</columns>
    <columns>Number_Selected__c</columns>
    <columns>Submitter__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>State__c</columns>
    <columns>Zipcode__c</columns>
    <columns>Job_Costing__c</columns>
    <columns>EE_min__c</columns>
    <columns>EE_max__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Created this month</label>
</ListView>