force-app/main/default/objects/Client_Reference_Requests__c/listViews/Created_this_month1.listView-meta.xml
<ListView>
    <fullName>Created_this_month1</fullName>
    <columns>NAME</columns>
    <columns>Number_Found__c</columns>
    <columns>Number_Selected__c</columns>
    <columns>Submitter__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>EE_min__c</columns>
    <columns>EE_max__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account_Owner__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Created this Week</label>
</ListView>