force-app/main/default/objects/Client_Reference_Requests__c/listViews/Look_for_1_request.listView-meta.xml
<ListView>
    <fullName>Look_for_1_request</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Submitter__c</columns>
    <columns>Number_Found__c</columns>
    <columns>Number_Selected__c</columns>
    <columns>Account_Type__c</columns>
    <columns>State__c</columns>
    <columns>Business_Type_1__c</columns>
    <columns>Business_Type_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Submitter__c</field>
        <operation>contains</operation>
        <value>Jennifer Ledwith</value>
    </filters>
    <label>Look for 1 request</label>
</ListView>